<resources>
    <string name="app_name">Eat Treat</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="preference_file_name">User Details</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="favourites">Favourite Restaurants</string>
    <string name="history">Order History</string>
    <string name="faq">FAQs</string>
    <string name="logout">Log out</string>
    <string name="navigation_drawer">Eat Treat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="action_sort">Action Sort</string>
    <string name="action_sort2">Cost(low to high)</string>
    <string name="cost_sort">Cost Sort</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below</string>
</resources>
