<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            />
            <item
            android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>
        <item
            android:id="@+id/favourites"
            android:title="@string/favourites"
            android:icon="@drawable/ic_favourites"/>

        <item
            android:id="@+id/faq"
            android:title="@string/faq"
            android:icon="@drawable/ic_faq"/>

        <item
            android:id="@+id/LogOut"
            android:title="@string/logout" android:icon="@drawable/ic_logout"
            /></group>
</menu>